...
    val queueItems by queueRepo.getQueueItemsFlow().collectAsState(initial = emptyList())
    val coroutineScope = rememberCoroutineScope()

    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Play Queue", style = MaterialTheme.typography.headlineMedium) },
                actions = {
                    if (queueItems.isNotEmpty()) {
                        IconButton(
                            onClick = {
                                coroutineScope.launch {
                                    queueRepo.clearQueue()
...
